src/main/java/ru/test/company/error/ErrorCustom.java
package ru.test.company.error;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
public class ErrorCustom extends Throwable {

    private int code;

    private String message;
}
